--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ div.TakaBack {
   border-color: dodgerblue;
   border-radius: 20px;
   padding: 15px;
+  height: 650px;
 }
 div.TakaName {
   margin-top: 15px;
@@ -19,8 +20,9 @@ div.TakaPort {
   float: right;
 }
 div.TakaRght {
-  float: right;
-  margin-top: 123px;
+    float: right;
+    margin-top: -64px;
+    margin-left: 61px;
 }
 div.TakaPost {
   background-image: url("http://i.imgur.com/VxsROty.png");
@@ -29,10 +31,11 @@ div.TakaPost {
   min-height: 300px;
   color: black;
   padding: 10px;
-  margin-top: 123px;
+  margin-top: -553px;
   width: 350px;
   max-height: 500px;
   overflow-y: scroll;
+  float: left;
 }
 div.TakaPost::-webkit-scrollbar {
   width: 5px;
