Update and rename lucystyle.css to lucystylev2.css

--- a/lucystylev2.css
+++ b/lucystylev2.css
@@ -1,5 +1,5 @@
 div.LucyBack {
-  background-image: url("http://i.imgur.com/cLrMThi.png");
+  background-image: url("http://i.imgur.com/ihvUP8F.png");
   background-repeat: no-repeat;
   background-position: center; 
   background-color: white;
